tests/ui/issues/issue-14091-2.stderr
error[E0308]: mismatched types
  --> $DIR/issue-14091-2.rs:15:13
   |
LL |     assert!(x, x);
   |             ^
   |             |
   |             expected `bool`, found `BytePos`
   |             expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
